Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30363

[REG 12.0.2 -> 13.0] "Switch Between Function Declaration/Definition" does not work

XMLWordPrintable

    • 322dcd2c4 (13.0)

      1. Open cplusplus-tools manual test.
        It's in tests/manual/cplusplus-tools/cplusplus-tools.pro of Creator's source repository.
      2. Open file dummy.cpp from that project.
      3. Right-click on the line
        Dummy::Dummy(int)
        

        and select "Switch Between Function Declaration/Definition" from the context menu.
        Nothing happens.

      Instead, Creator should open the file dummy.h and place the cursor in the line

      Dummy(int a);
      

      In Creator 12.0.2, this works correctly.

      Found and tested by Squish test tst_basic_cpp_support.

        For Gerrit Dashboard: QTCREATORBUG-30363
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes