CppEditor: Re-add function decl/def switch handler

Was accidentally removed in 3771eb196b066314d427d7343cb1d4c6e2c5d6a4.

Fixes: QTCREATORBUG-30363
Change-Id: Ifef1266b144d2eb5b7b69ff3e721f781b4455e96
Reviewed-by: hjk <hjk@qt.io>